@@ -353,12 +353,13 @@ bool Score::read(QString name)
       info.setFile(name);
 
       QString cs = info.suffix();
-
-      if (cs == "mscz") {
+      QString csl = cs.toLower();
+      
+      if (csl == "mscz") {
             if (!loadCompressedMsc(name))
                   return false;
             }
-      else if (cs.toLower() == "msc" || cs.toLower() == "mscx") {
+      else if (csl == "msc" || csl == "mscx") {
             if (!loadMsc(name))
                   return false;
             }
@@ -371,34 +372,34 @@ bool Score::read(QString name)
                         loadStyle(&f);
                   }
 
-            if (cs == "xml") {
+            if (csl == "xml") {
                   importMusicXml(name);
                   connectSlurs();
                   }
-            else if (cs == "mxl")
+            else if (csl == "mxl")
                   importCompressedMusicXml(name);
-            else if (cs.toLower() == "mid" || cs.toLower() == "midi" || cs.toLower() == "kar") {
+            else if (csl == "mid" || csl == "midi" || csl == "kar") {
                   if (!importMidi(name))
                         return false;
                   }
-            else if (cs == "md") {
+            else if (csl == "md") {
                   if (!importMuseData(name))
                         return false;
                   }
-            else if (cs == "ly") {
+            else if (csl == "ly") {
                   if (!importLilypond(name))
                         return false;
                   }
-            else if (cs.toLower() == "mgu" || cs.toLower() == "sgu") {
+            else if (csl == "mgu" || csl == "sgu") {
                   if (!importBB(name))
                         return false;
                   }
-            else if (cs.toLower() == "cap") {
+            else if (csl == "cap") {
                   if (!importCapella(name))
                         return false;
                   connectSlurs();
                   }
-            else if (cs.toLower() == "ove") {
+            else if (csl == "ove") {
                   if(!importOve(name))
             		        return false;
 				          }
