@@ -1,6 +1,8 @@
 21.sep (la)
       - fix #7167: Time signature change causes triplets to corrupt score
       - fix #7142: Crescendo & delete measures problems
+      - fix #7197: MuseScore fails to open MSCZ files with capitals
+      - fix #6932: Changing notehead of a breve crash
 14.sep (la)
       - fix #7077: Applying double-note tremolo to dotted notes fails and alter measure duration
 30.aug (db)
